# braiins-controler

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/api/: config.rs  mod.rs  routs.rs
src/device/: braiins.rs  devices.rs  mod.rs  shelly.rs
src/utils/: automations.rs  config.rs
